--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/core": "next",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.11.1",
+    "axios": "^0.21.0",
     "clsx": "latest",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
